# face-liveness-age-detector

./: .gitignore  Makefile  README.md  pyproject.toml
.dvc/: config
data/processed/: .gitignore
docs/: conf.py  index.rst  overview.rst  refs.bib
flad/: main.py  utils.py
flad/fdspoof/: face_detection_spoofing.py
flad/fdvid/: video_processing.py
