[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flad"
version = "0.1.0"
description = "Face Liveness and Age Detection"
authors = ["Ricardo G. Sousa <ricardo@rsousa.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
opencv-python = "~4.9.0.80"
insightface = "~0.7.3"
onnxruntime = "~1.17.1"
onnxruntime-gpu = "~1.17.1"
dvc = "~3.49.0"
dvc-gdrive = "~3.0.1"
streamlit = "~1.33.0"


[tool.poetry.group.dev.dependencies]
sphinx = "~7.2.6"

